force-app/main/default/objects/Cadastro_eCommerce__c/Cadastro_eCommerce__c.object-meta.xml
<CustomObject>
    <label>Cadastro e-Commerce</label>
    <nameField>
        <displayFormat>CC {000}</displayFormat>
        <label>Nº Cadastro eCommerce</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cadastros e-Commerce</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>