force-app/main/default/objects/Cadastro_eCommerce__c/fields/Conta__c.field-meta.xml
<CustomField>
    <fullName>Conta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cadastros e-Commerce</relationshipLabel>
    <relationshipName>Cadastros_e_Commerce</relationshipName>
    <type>Lookup</type>
</CustomField>