force-app/main/default/objects/Cadastro_eCommerce__c/fields/Nome_da_Organizacao__c.field-meta.xml
<CustomField>
    <fullName>Nome_da_Organizacao__c</fullName>
    <label>Nome da Organização</label>
    <length>255</length>
    <type>Text</type>
</CustomField>