force-app/main/default/objects/Cadastro_eCommerce__c/fields/Nome_de_Usuario__c.field-meta.xml
<CustomField>
    <fullName>Nome_de_Usuario__c</fullName>
    <label>Nome de Usuário</label>
    <length>255</length>
    <type>Text</type>
</CustomField>