force-app/main/default/objects/Cadastro_eCommerce__c/fields/Primeiro_nome__c.field-meta.xml
<CustomField>
    <fullName>Primeiro_nome__c</fullName>
    <label>Primeiro nome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>