force-app/main/default/objects/Cadastro_eCommerce__c/fields/Sobrenome__c.field-meta.xml
<CustomField>
    <fullName>Sobrenome__c</fullName>
    <label>Sobrenome</label>
    <length>255</length>
    <type>Text</type>
</CustomField>