force-app/main/default/objects/Cadastro_eCommerce__c/fields/status_texto__c.field-meta.xml
<CustomField>
    <fullName>status_texto__c</fullName>
    <formula>IF(TEXT(Status__c) == &quot;Aprovado&quot;, &quot;approved&quot;, IF(TEXT(Status__c) == &quot;Aguardando aprovação&quot;, &quot;pending&quot;, &quot;denied&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>status texto</label>
    <type>Text</type>
</CustomField>