force-app/main/default/objects/Cadastro_eCommerce__c/listViews/C_pia_de_Solicitados.listView-meta.xml
<ListView>
    <fullName>C_pia_de_Solicitados</fullName>
    <columns>NAME</columns>
    <columns>Primeiro_nome__c</columns>
    <columns>Sobrenome__c</columns>
    <columns>Cargo__c</columns>
    <columns>Nome_da_Organizacao__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Cadastros Solicitados</label>
</ListView>