force-app/main/default/objects/Cadastro_eCommerce__c/listViews/Cadastrados.listView-meta.xml
<ListView>
    <fullName>Cadastrados</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Tipo_de_Cadastro__c</columns>
    <columns>Nome_da_Organizacao__c</columns>
    <columns>Primeiro_nome__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Aprovado</value>
    </filters>
    <label>Cadastrados</label>
</ListView>