force-app/main/default/objects/Cadastro_eCommerce__c/listViews/Solicitados.listView-meta.xml
<ListView>
    <fullName>Solicitados</fullName>
    <columns>NAME</columns>
    <columns>Primeiro_nome__c</columns>
    <columns>Sobrenome__c</columns>
    <columns>Cargo__c</columns>
    <columns>Nome_da_Organizacao__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Solicitados</label>
</ListView>